--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,17 @@
 
         <div class="navbarlist">
             <ul class="flex gap-10">
-                <li class="cursor-pointer">👨‍⚕️Login</li>
-                <li class="cursor-pointer">🔍About Us</li>
-                <li class="cursor-pointer">💵Pricing</li>
+                <li class="cursor-pointer">
+                    <a href="">👨‍⚕️Login</a>
+                </li>
+
+                <li class="cursor-pointer">
+                    <a href="#about">🔍About Us</a>
+                </li>
+
+                <li class="cursor-pointer">
+                    <a href="#pricing">💵Pricing</a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -49,7 +57,7 @@
     </section>
 
     <!-- WHO ARE WE SECTION -->
-    <section class="who-container py-20 w-4/5 mx-auto flex flex-col gap-4 relative top-20 text-center">
+    <section id="about" class="who-container py-20 w-4/5 mx-auto flex flex-col gap-4 relative top-20 text-center">
         <div class="who-header">
             <p>We are a team of experienced nursing professionals dedicated to helping you navigate the challenging journey of nursing school.</p>
         </div>
@@ -117,7 +125,7 @@
     </div>
 
     <!-- PRICING -->
-    <div class="pricing-container py-20 flex flex-col gap-7 w-4/5 mx-auto">
+    <div id="pricing" class="pricing-container py-20 flex flex-col gap-7 w-4/5 mx-auto">
         <div class="pricing-header flex flex-col gap-4">
             <h2 class="text-4xl">💶Flexible pricing plan</h2>
             <p class="text-zinc-900">Choose a plan that fits your needs. Enjoy flexibility, savings, and access to premium services.</p>
