--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 <body class="bg-blue-50">
     <nav class="navbar-container px-4 flex items-center fixed w-full justify-between h-20">
         <div class="logo">
-            <a href="./index.html" class="cursor-pointer">NursePractitioners</a>
+            <a href="./index.html" class="cursor-pointer underline">NurseProffesors</a>
         </div>
 
         <div class="navbarlist">
