add login and signup pages, subscription section and respective images and styling

--- a/attributions.html
+++ b/attributions.html
@@ -3,3 +3,6 @@ Photo by RDNE Stock project: https://www.pexels.com/photo/health-care-profession
 Photo by Alexander Zvir: https://www.pexels.com/photo/medical-professionals-in-their-scrub-suit-9054999/
 
 <a href="https://www.freepik.com/free-photo/successful-medical-team_12232924.htm#fromView=search&page=1&position=1&uuid=89904ea7-b04b-4710-b5ba-8f20f35970f9">Image by gpointstudio on Freepik</a>
+<a href="https://www.freepik.com/free-vector/hand-drawn-international-nurses-day-illustration_24436213.htm">Image by freepik</a>
+<a href="https://www.freepik.com/free-vector/hand-drawn-international-nurses-day-illustration_24436208.htm">Image by freepik</a>
+Photo by Anna Shvets: https://www.pexels.com/photo/person-with-nail-art-holding-monstera-leaf-against-pink-background-11124900/
