--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <div class="hero-text flex flex-col items-start justify-center gap-5 text-left basis-full">
             <h1 class="text-info">Pass your nursing school entrance exams the first time. <span>Guaranteed.</span></h1>
             <p class="text-2">We help Students pass their TEAS, HESI Tests, Exams and Assignments.</p>
-            <button class="p-4 rounded-xl flex items-center justify-center gap-1" type="button">ORDER NOW <span
-                    class="text-xs"> &rarr;</span></button>
+            <a class="p-4 rounded-xl flex items-center justify-center gap-1" href="./login.html">ORDER NOW <span
+                    class="text-xs"> &rarr;</span></a>
         </div>
 
         <div class="hero-image basis-full">
